# llm-content-extractor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PROMOTION_CN.md  PROMOTION_EN.md  PUBLISHING.md
examples/: advanced_usage.py  basic_usage.py
llm_content_extractor/: __init__.py  base.py  extractor.py  strategies.py
llm_content_extractor/strategies/: __init__.py  code_extractor.py  html_extractor.py  json_extractor.py  xml_extractor.py
tests/: __init__.py  test_json_extractor.py  test_other_extractors.py
